# OpenGL-FFP-Alien-Scene

./: CMakeCache.txt  CMakeLists.txt  COSC363_Assignment_1_swi126.sln  COSC363_Assignment_1_swi126.vcxproj  COSC363_Assignment_1_swi126.vcxproj.filters  Makefile  Models.cpp  Models.h  README.md  Scene.cpp  Scene.out  cmake_install.cmake
